@@ -12,13 +12,13 @@ General:
         # Turning this on will scale mcMMO around 1-1000 with default scaling factor
         # Everything in your config related to skill level requirements, skill level bonuses, etc will be multiplied by 10 when this mode is on
         # This change is purely cosmetic, it retains the old feel of mcMMO where you could level up thousands of times
-        UseOldLevelScaling: true
+        RetroMode: true
         Skill_Scaling:
-            # This is the value that is skill level requirements are multiplied by in Classic Mode (Default is 10)
-            Classic_LevelReq_Factor: 10
-            # This is the value that the xp required to level is multiplied by when in classic mode
+            # This is the value that is skill level requirements are multiplied by in Retro Mode (Default is 10)
+            RetroMode_LevelReq_Factor: 10
+            # This is the value that the xp required to level is multiplied by when in Retro mode
             # Default is 1
-            Classic_XP_Formula_Factor: 1
+            RetroMode_XP_Formula_Factor: 1
     Locale: en_US
     MOTD_Enabled: true
     # Send a message to the player when his profile was successfully loaded
